Fix for search input overlapping
fixes #1044
closes #1045

--- a/css/style.css
+++ b/css/style.css
@@ -802,7 +802,6 @@ h2 a {
 
 .algolia-autocomplete {
   min-width: 12em;
-  max-width: 12em;
   top: -0.2em;
 }
 
